@@ -1,0 +1,12 @@
+package strongdmm.ui.panel.notification
+
+import java.util.*
+
+class State {
+    var windowHeight: Float = 0f
+
+    var notificationText: String? = null
+    var notificationTextWidth: Float = 0f
+
+    var clearTask: TimerTask? = null
+}
