@@ -2,6 +2,9 @@ Features:
  * New appearance!
  * Added a hotkey (F5) to Reset Windows state (initial sizes and position).
 
+Tweaks:
+ * Progress text is now shown in a separate panel.
+
 --------------------------------------
  v1.3.1 (2020-05-20)
 --------------------------------------
